[package]
name = "lamdon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[rust]
debug = true
debuginfo-level = 2

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
owo-colors = "4.0.0"
ratatui = "0.26.2"
